# Character-Architecture-Example

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: api.hpp  mage.hpp  ranger.hpp  warrior.hpp
src/: mage.cpp  ranger.cpp  warrior.cpp
